--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "url": "https://github.com/runonflux/bitcore-message.git"
   },
   "dependencies": {
-    "bitcore-lib": "git://github.com/runonflux/bitcore-lib#master"
+    "bitcore-lib": "https://github.com/runonflux/bitcore-lib#master"
   },
   "devDependencies": {
-    "bitcore-build": "git://github.com/runonflux/bitcore-build#master",
+    "bitcore-build": "https://github.com/runonflux/bitcore-build#master",
     "brfs": "^1.3.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10"
